syntax = "proto3";

package shipmentpb;

option go_package = "github.com/Chandrahas77/logistics-microservices/shipment-service/shipmentpb";

service ShipmentService {
  rpc CreateShipment(CreateShipmentRequest) returns (CreateShipmentResponse);
  rpc GetShipment(GetShipmentRequest) returns (GetShipmentResponse);
  rpc ListShipments (ListShipmentsRequest) returns (ListShipmentsResponse);

}

message CreateShipmentRequest {
  string shipment_id = 1;
  string order_id = 2;
  string status = 3;
}

message CreateShipmentResponse {
  string status = 1;
}

message GetShipmentRequest {
  string shipment_id = 1;
}

message GetShipmentResponse {
  string shipment_id = 1;
  string order_id = 2;
  string status = 3;
}

message ListShipmentsRequest {}

message Shipment {
  string id = 1;
  string order_id = 2;
  string status = 3;
}

message ListShipmentsResponse {
  repeated Shipment shipments = 1;
}
